# HideDesktopIconsInSysTray

./: .gitignore  CMakeLists.txt  README.md
src/: SysTray.rc  main.cpp  resource.h  stdafx.h  toggle.cpp  toggle.h
src/toggle/: CMakeLists.txt  toggle.cpp
